--- a/Buy-My-Kai/server2/package.json
+++ b/Buy-My-Kai/server2/package.json
@@ -26,7 +26,11 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "dotenv": "^6.1.0",
     "express": "^4.16.2",
-    "knex": "^0.14.2"
+    "i": "^0.3.6",
+    "jsonwebtoken": "^8.3.0",
+    "knex": "^0.14.2",
+    "libsodium": "^0.7.3"
   }
 }
