--- a/Buy-My-Kai/client2/package.json
+++ b/Buy-My-Kai/client2/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "1.1.1",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.2",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.82.5"
   },
   "scripts": {
